syntax = "proto3";

package user;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/sagata1999/auth/pkg/user_v1;user_v1";

service UserV1 {
    rpc Create(CreateRequest) returns (CreateResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Update(UpdateRequest) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

enum Role {
    user = 0;
    admin = 1;
}

message UserInfo {
    string name = 1;
    string email = 2;
    Role role = 3; 
}

message CreateUser {
    UserInfo info = 1;
    string password = 4;
    string password_confirm = 5;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message UpdateUserInfo {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
    Role role = 4;
}

message CreateRequest {
    CreateUser user = 1;
}

message CreateResponse {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message ListRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListResponse {
    repeated User users = 1;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}
